[gd_scene load_steps=2 format=3 uid="uid://phgcpeoj46qk"]

[ext_resource type="Script" path="res://Game/Figures/Figure.gd" id="1_icmd0"]

[node name="Figure" type="Node2D"]
top_level = true
z_index = 10
z_as_relative = false
script = ExtResource("1_icmd0")

[node name="Area2D" type="Area2D" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
